tests/tooling/fixtures/native/recovery/negative/negative_global_assignment_compound_bool_rhs.objc3
// Expected diagnostic code(s): O3S206.
module NegativeGlobalAssignmentCompoundBoolRhs;

let total = 5;

fn main() -> i32 {
  let flag = true;
  total |= flag;
  return total;
}
